Todo responsive casi listo solo falta productos

--- a/index.html
+++ b/index.html
@@ -74,42 +74,42 @@
                 </ol>
                 <div class="carousel-inner ">
                     <div class="carousel-item " data-bs-interval="3000">
-                        <a href="pages/productos.html"><img src="img/surftrainerKITE800x600.jpg" class=" d-block h-100  courusel__img--size rounded corousel__img" alt="..."></a>
+                        <a href="pages/productos.html"><img src="img/surftrainerKITE800x600.jpg" class=" d-block h-100  courusel__img--size rounded corousel__img" alt="tabla"></a>
                         <div class="carousel-caption d-none d-md-block">
                             <h5 class="carousel__title">SURF TRAINER</h5>
                             <p class="carousel__text">Nuestro Balance Board</p>
                         </div>
                     </div>
                     <div class="carousel-item active" data-bs-interval="3000">
-                        <a href="pages/productos.html"><img src="img/perchero3q800x600.jpg" class=" d-block h-100 courusel__img--size rounded corousel__img" alt="..."></a>
+                        <a href="pages/productos.html"><img src="img/perchero3q800x600.jpg" class=" d-block h-100 courusel__img--size rounded corousel__img" alt="perchero"></a>
                         <div class="  carousel-caption d-none d-md-block ">
                             <h5 class="carousel__title">PERCHEROS SURFER</h5>
                             <p class="carousel__text">Ponele onda a tu espacio</p>
                         </div>
                     </div>
                     <div class="carousel-item " data-bs-interval="3000">
-                        <a href="pages/productos.html"><img src="img/modeloback800x600.jpg" class="d-block h-100 courusel__img--size  rounded corousel__img" alt="..."></a>
+                        <a href="pages/productos.html"><img src="img/modeloback800x600.jpg" class="d-block h-100 courusel__img--size  rounded corousel__img" alt="modelo"></a>
                         <div class="carousel-caption d-none d-md-block">
                             <h5 class="carousel__title">SURF TRAINER</h5>
                             <p class="carousel__text">Nuestro Balance Board</p>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <a href="pages/productos.html"><img src="img/destapabirosa800x600.jpg" class="d-block h-100 courusel__img--size rounded corousel__img" alt="..."> </a>
+                        <a href="pages/productos.html"><img src="img/destapabirosa800x600.jpg" class="d-block h-100 courusel__img--size rounded corousel__img" alt="destapador"> </a>
                         <div class="carousel-caption d-none d-md-block">
                             <h5 class="carousel__title">DESTAPADORES</h5>
                             <p class="carousel__text">Practico destapador de birra</p>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <a href="pages/productos.html"><img src="img/surftranierlanita800x600.jpg" class="d-block h-100 courusel__img--size rounded corousel__img" alt="..."></a>
+                        <a href="pages/productos.html"><img src="img/surftranierlanita800x600.jpg" class="d-block h-100 courusel__img--size rounded corousel__img" alt="tablayperra"></a>
                         <div class="carousel-caption d-none d-md-block">
                             <h5 class="carousel__title">SURF TRAINER</h5>
                             <p class="carousel__text">Nuestro Balance Board</p>
                         </div>
                     </div>
                     <div class="carousel-item" >
-                        <a href="pages/productos.html"><img src="img/llaveroceleste800x600.jpg" class="d-block h-100 courusel__img--size rounded corousel__img" alt="..."></a>
+                        <a href="pages/productos.html"><img src="img/llaveroceleste800x600.jpg" class="d-block h-100 courusel__img--size rounded corousel__img" alt="llavero"></a>
                         <div class="carousel-caption d-none d-md-block">
                             <h5 class="carousel__title">LLAVEROS</h5>
                             <p class="carousel__text">Lleva con vos el style de la playa</p>
@@ -136,13 +136,13 @@
         <section>
             <div class="row" >
                 <div class="col-sm-4 col-xs-12 centerimg wow animate__animated animate__zoomIn" >
-                    <img src="img/logosnowTRAINER450x450.jpg" class="img-fluid wow animate__animated animate__zoomInLeft" alt="">
+                    <img src="img/logosnowTRAINER450x450.jpg" class="img-fluid wow animate__animated animate__zoomInLeft" alt="logosurftrainer">
                 </div>
                 <div class="col-sm-4 col-xs-12 centerimg" >
-                    <img src="img/logosurfTRAINER450x450.jpg" class="img-fluid wow animate__animated animate__zoomIn" alt="">
+                    <img src="img/logosurfTRAINER450x450.jpg" class="img-fluid wow animate__animated animate__zoomIn" alt="logosurftrainer">
                 </div>
                 <div class="col-sm-4 col-xs-12 centerimg" >
-                    <img src="img/logokiteTRAINER450x450.jpg" class="img-fluid wow animate__animated animate__zoomInRight" alt="">
+                    <img src="img/logokiteTRAINER450x450.jpg" class="img-fluid wow animate__animated animate__zoomInRight" alt="logosurftrainer">
                 </div>
             </div>
         </section>
@@ -199,16 +199,16 @@
                 <ul class="list-unstyled d-flex">
                     <li class="ms-3">
                         <a class="link-dark" Target="_blank" href="https://www.instagram.com/surfclub.arg/">
-                            <img src="img/ig4.png" class="footer__redes" alt="">
+                            <img src="img/ig4.png" class="footer__redes" alt="iconoinsta">
                         </a>
                         <li class="ms-3">
                             <a class="link-dark" Target="_blank" href="https://www.facebook.com/">
-                                <img src="img/fb4.png" class="footer__redes" alt="">
+                                <img src="img/fb4.png" class="footer__redes" alt="iconofb">
                             </a>
                         </li>
                         <li class="ms-3">
                             <a class="link-dark" Target="_blank" href="https://www.twitter.com">
-                                <img src="img/twitter4.png" class="footer__redes" alt="">
+                                <img src="img/twitter4.png" class="footer__redes" alt="iconotwitter">
                             </a>
                         </li>
                     </li>
