--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -173,17 +173,17 @@
                 <p>© 2022 Company, Inc. All rights reserved.</p>
                 <ul class="list-unstyled d-flex">
                     <li class="ms-3">
-                        <a class="link-dark" href="https://www.instagram.com/surfclub.arg/" Target="_blank">
-                            <img src="../img/ig4.png" class="footer__redes" alt="">
+                        <a class="link-dark" Target="_blank" href="https://www.instagram.com/surfclub.arg/">
+                            <img src="../img/ig4.png" class="footer__redes" alt="iconoinsta">
                         </a>
                     </li>
                     <li class="ms-3">
-                        <a class="link-dark" href="https://www.facebook.com/" Target="_blank">
-                            <img src="../img/fb4.png" class="footer__redes" alt="">
+                        <a class="link-dark" Target="_blank" href="https://www.facebook.com/">
+                            <img src="../img/fb4.png" class="footer__redes" alt="iconofb">
                         </a>
                         <li class="ms-3">
-                            <a class="link-dark" href="https://www.twitter.com" Target="_blank">
-                                <img src="../img/twitter4.png" class="footer__redes" alt="">
+                            <a class="link-dark" Target="_blank" href="https://www.twitter.com">
+                                <img src="../img/twitter4.png" class="footer__redes" alt="iconotwitter">
                             </a>
                         </li>
                     </li>
