--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -55,7 +55,7 @@
     </header>
 
     <main >
-        <section class="grid ">
+        <section id="grid">
             <div class="grid__portada wow animate__animated animate__backInLeft">
                 <img src="../img/tabla-horizontal.jpg" class=" article__img" alt="tablasurf2">
             </div>
@@ -69,10 +69,10 @@
                 <p class="grid__article--text">Todas nuestros productos son cortados a pulso, ,con una alta presicion y experiencia en el rubro. En nuestro taller todo pasa por un tratamiento para que duren nuestros productos al maximo.</p>
                 <img src="../img/fotos-pesadas/taller.jpg" class=" wow animate__animated animate__pulse shadowimg article__img" alt="fototaller">
             </article>
-            <aside class="grid__aside wow animate__animated animate__rotateInUpLeft">
+            <aside class="grid__aside  ">
                 <p class="grid__aside--textvertical"> Fabricadas por riders, para riders  </p> 
             </aside>
-            <div class="divboton animate__zoomInUp animate__animated wow">
+            <div class="divboton animate__zoomInUp animate__animated wow ">
                 <a href="contacto.html" class="divboton__botoncontacto ">
                     PARA MAS<br> INFORMACION <br>CLICK ACA
                 </a>
@@ -82,13 +82,13 @@
         <section>
             <div class="row" >
                 <div class="col-sm-4 col-xs-12 centerimg wow animate__animated animate__zoomIn" >
-                    <img src="img/logosnowTRAINER450x450.jpg" class="img-fluid wow animate__animated animate__zoomInLeft" alt="">
+                    <img src="img/logosnowTRAINER450x450.jpg" class="img-fluid wow animate__animated animate__zoomInLeft" alt="logosurftrainer">
                 </div>
                 <div class="col-sm-4 col-xs-12 centerimg" >
-                    <img src="img/logosurfTRAINER450x450.jpg" class="img-fluid wow animate__animated animate__zoomIn" alt="">
+                    <img src="img/logosurfTRAINER450x450.jpg" class="img-fluid wow animate__animated animate__zoomIn" alt="logosurftrainer">
                 </div>
                 <div class="col-sm-4 col-xs-12 centerimg" >
-                    <img src="img/logokiteTRAINER450x450.jpg" class="img-fluid wow animate__animated animate__zoomInRight" alt="">
+                    <img src="img/logokiteTRAINER450x450.jpg" class="img-fluid wow animate__animated animate__zoomInRight" alt="logosurftrainer">
                 </div>
             </div>
         </section>
@@ -145,16 +145,16 @@
                 <ul class="list-unstyled d-flex">
                     <li class="ms-3">
                         <a class="link-dark" Target="_blank" href="https://www.instagram.com/surfclub.arg/">
-                            <img src="../img/ig4.png" class="footer__redes" alt="">
+                            <img src="../img/ig4.png" class="footer__redes" alt="iconoinsta">
                         </a>
                     </li>
                     <li class="ms-3">
                         <a class="link-dark" Target="_blank" href="https://www.facebook.com/">
-                            <img src="../img/fb4.png" class="footer__redes" alt="">
+                            <img src="../img/fb4.png" class="footer__redes" alt="iconofb">
                         </a>
                         <li class="ms-3">
                             <a class="link-dark" Target="_blank" href="https://www.twitter.com">
-                                <img src="../img/twitter4.png" class="footer__redes" alt="">
+                                <img src="../img/twitter4.png" class="footer__redes" alt="iconotwitter">
                             </a>
                         </li>
                     </li>
