--- a/pages/productos.html
+++ b/pages/productos.html
@@ -54,43 +54,43 @@
         </nav>
     </header>
 
-    <main class="conteiner">
+    <main class="conteiner conteinercard">
         <div class="row row-cols-1 row-cols-sm-2 g-3">
             <div class="col">
-            <div class="card">
-                <img src="../img/perchero3q800x600.jpg" class="card-img-top card__img--mod" alt="card-grid-image">
-                <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <div class="card">
+                    <img src="../img/surftrainerKITE800x600.jpg" class="card-img-top card__img--mod" alt="card-grid-image">
+                    <div class="card-body">
+                        <h5 class="card-title">SURF TRAINER</h5>
+                        <p class="card-text">Nuestros balance board, entrena tu equilibrio y propiocepcion.</p>
+                    </div>
                 </div>
-            </div>
             </div>
             <div class="col">
-            <div class="card">
-                <img src="../img/perchero3q800x600.jpg" class="card-img-top card__img--mod" alt="card-grid-image">
-                <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <div class="card">
+                    <img src="../img/destapabirosa800x600.jpg" class="card-img-top card__img--mod" alt="card-grid-image">
+                    <div class="card-body">
+                        <h5 class="card-title">Destapadores</h5>
+                        <p class="card-text">Practicos destapadores de birra en forma de tabla fish.</p>
+                    </div>
                 </div>
-            </div>
             </div>
             <div class="col">
-            <div class="card">
-                <img src="../img/perchero3q800x600.jpg" class="card-img-top card__img--mod" alt="card-grid-image">
-                <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                <div class="card">
+                    <img src="../img/perchero3q800x600.jpg" class="card-img-top card__img--mod" alt="card-grid-image">
+                    <div class="card-body">
+                        <h5 class="card-title">Percheros</h5>
+                        <p class="card-text">Percheros 3 quillas para tu casa local u oficina, dale style a tu espacio.</p>
+                    </div>
                 </div>
-            </div>
             </div>
             <div class="col">
-            <div class="card">
-                <img src="../img/perchero3q800x600.jpg" class="card-img-top card__img--mod" alt="card-grid-image">
-                <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <div class="card">
+                    <img src="../img/llaveroceleste800x600.jpg" class="card-img-top card__img--mod" alt="card-grid-image">
+                    <div class="card-body">
+                        <h5 class="card-title">Llaveros</h5>
+                        <p class="card-text">Llaveros con onda para llevar el estilo de la playa a donde vas o usalo de adorno.</p>
+                    </div>
                 </div>
-            </div>
             </div>
         </div>
     </main>
@@ -146,16 +146,16 @@
                 <ul class="list-unstyled d-flex">
                     <li class="ms-3">
                         <a class="link-dark" Target="_blank" href="https://www.instagram.com/surfclub.arg/">
-                            <img src="../img/ig4.png" class="footer__redes" alt="">
+                            <img src="../img/ig4.png" class="footer__redes" alt="iconoinsta">
                         </a>
                     </li>
                     <li class="ms-3">
                         <a class="link-dark" Target="_blank" href="https://www.facebook.com/">
-                            <img src="../img/fb4.png" class="footer__redes" alt="">
+                            <img src="../img/fb4.png" class="footer__redes" alt="iconofb">
                         </a>
                         <li class="ms-3">
                             <a class="link-dark" Target="_blank" href="https://www.twitter.com">
-                                <img src="../img/twitter4.png" class="footer__redes" alt="">
+                                <img src="../img/twitter4.png" class="footer__redes" alt="iconotwitter">
                             </a>
                         </li>
                     </li>
