--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -117,16 +117,16 @@
                 <ul class="list-unstyled d-flex">
                     <li class="ms-3">
                         <a class="link-dark" Target="_blank" href="https://www.instagram.com/surfclub.arg/">
-                            <img src="../img/ig4.png" class="footer__redes" alt="">
+                            <img src="../img/ig4.png" class="footer__redes" alt="iconoinsta">
                         </a>
                     </li>
                     <li class="ms-3">
                         <a class="link-dark" Target="_blank" href="https://www.facebook.com/">
-                            <img src="../img/fb4.png" class="footer__redes" alt="">
+                            <img src="../img/fb4.png" class="footer__redes" alt="iconofb">
                         </a>
                         <li class="ms-3">
                             <a class="link-dark" Target="_blank" href="https://www.twitter.com">
-                                <img src="../img/twitter4.png" class="footer__redes" alt="">
+                                <img src="../img/twitter4.png" class="footer__redes" alt="iconotwitter">
                             </a>
                         </li>
                     </li>
