--- a/pages/productos.html
+++ b/pages/productos.html
@@ -55,42 +55,58 @@
     </header>
 
     <main class="conteiner conteinercard">
-        <div class="row row-cols-1 row-cols-sm-2 g-3">
+        <div class="row">
+            <div class="col-12">
+                <p class="fs-1 text-center mt-5 fw-bold  animate__animated wow animate__flip">
+                    TODOS NUESTROS PRODUCTOS 
+                </p>
+            </div>
+        </div>
+        <div class="row row-cols-1 row-cols-sm-2 g-3 conteinercard2">
             <div class="col">
-                <div class="card">
-                    <img src="../img/surftrainerKITE800x600.jpg" class="card-img-top card__img--mod" alt="card-grid-image">
-                    <div class="card-body">
-                        <h5 class="card-title">SURF TRAINER</h5>
-                        <p class="card-text">Nuestros balance board, entrena tu equilibrio y propiocepcion.</p>
+                <div class="card shadow-lg border-dark">
+                    <img src="../img/surftrainerKITE800x600.jpg" class="rounded-4 mx-auto d-block card-img-top card__img--mod" alt="card-grid-image">
+                    <div class="textmod card-body">
+                        <h5 class="card-title fs-2">SURF TRAINER</h5>
+                        <p class="card-text fs-5">Nuestros balance board, entrena tu equilibrio y propiocepcion.</p>
+                        <a class="btn btn-dark btn-lg" href="contacto.html" role="button">COMPRAR</a>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card">
-                    <img src="../img/destapabirosa800x600.jpg" class="card-img-top card__img--mod" alt="card-grid-image">
-                    <div class="card-body">
-                        <h5 class="card-title">Destapadores</h5>
-                        <p class="card-text">Practicos destapadores de birra en forma de tabla fish.</p>
+                <div class="card shadow-lg border-dark">
+                    <img src="../img/destapabirosa800x600.jpg" class="rounded-4 mx-auto d-block card-img-top card__img--mod" alt="card-grid-image">
+                    <div class="textmod card-body">
+                        <h5 class="card-title fs-2">Destapadores</h5>
+                        <p class="card-text fs-5">Practicos destapadores de birra en forma de tabla fish.</p>
+                        <a class="btn btn-dark btn-lg" href="contacto.html" role="button">COMPRAR</a>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card">
-                    <img src="../img/perchero3q800x600.jpg" class="card-img-top card__img--mod" alt="card-grid-image">
-                    <div class="card-body">
-                        <h5 class="card-title">Percheros</h5>
-                        <p class="card-text">Percheros 3 quillas para tu casa local u oficina, dale style a tu espacio.</p>
+                <div class="card shadow-lg border-dark">
+                    <img src="../img/perchero3q800x600.jpg" class="rounded-4 mx-auto d-block card-img-top card__img--mod" alt="card-grid-image">
+                    <div class="textmod card-body">
+                        <h5 class="card-title fs-2">Percheros</h5>
+                        <p class="card-text fs-5">Percheros 3 quillas para tu casa local u oficina, dale style a tu espacio.</p>
+                        <a class="btn btn-dark btn-lg" href="contacto.html" role="button">COMPRAR</a>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card">
-                    <img src="../img/llaveroceleste800x600.jpg" class="card-img-top card__img--mod" alt="card-grid-image">
-                    <div class="card-body">
-                        <h5 class="card-title">Llaveros</h5>
-                        <p class="card-text">Llaveros con onda para llevar el estilo de la playa a donde vas o usalo de adorno.</p>
+                <div class="card shadow-lg border-dark">
+                    <img src="../img/llaveroceleste800x600.jpg" class="rounded-4 mx-auto d-block card-img-top card__img--mod" alt="card-grid-image">
+                    <div class="textmod card-body">
+                        <h5 class="card-title fs-2">Llaveros</h5>
+                        <p class="card-text fs-5">Llaveros con onda para llevar el estilo de la playa a donde vas.</p>
+                        <a class="btn btn-dark btn-lg" href="contacto.html" role="button">COMPRAR</a>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <img src="../img/tablasurfhorizontal.jpg" alt="tablasurf" class="wow animate__animated animate__zoomIn mb-5 rounded-4 mx-auto d-block img-fluid">
             </div>
         </div>
     </main>
